2024-07-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Implement regular expression search in replace
	methods (github issue 424) by using -rangeOfString:options:range: in
	place of obsolete optimisation function.

2024-07-09 Richard Frith-Macdonald <rfm@gnu.org>

	* config/codeset.m4:
 	* config/objc-con-autoload.m4:
 	* config/pathtls.m4:
 	* config/pathxml.m4:
 	* config/procfs.m4:
 	* configure.ac:
	Changes to avoid the use of most obsolete/deprecated autoconf macros.
	Change usage of AC_CONFIG_AUX_DIR() to deal with altered behavior in
	autoconf-2.71 (shipped on many new systems) where the value we set
	in CURRENT_GNUSTEP_MAKEFILES is not available.  This should now use
	the GNUSTEP_MAKEFILES environment variable or get the output of the
	gnustep-config script directly.

2024-06-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistantObject.m: Use standard method name conventions
	* Tools/AGSOutput.m:
	* Tools/AGSParser.m:
	* Tools/autogsdoc.m:
	* Tools/make_strings/make_strings.m:
	* Tools/plutil.m:
	Fix various memory leaks.
	* Tools/NSObject.m:
	* Documentation/Base.gsdoc:
	Make GSLogZombie() an external function for debuggers which can't find
	it as a static function. Add [NSZombie -logZombie:] method to call the
	function in case there is a debugger which can set a breakpoint on the
	method more easily than on the function.

2024-06-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m:
	* Source/GSTLS.m:
	* Source/NSDictionary.m:
	* Source/NSThread.m:
	* Source/NSURLSession.m:
	* Tools/AGSHtml.m:
	* Tools/AGSOutput.m:
	* Tools/AGSParser.m:
	Fix dead assignments.

2024-06-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLProtocol.m:
	* Source/GSTLS.m:
	* Source/NSConnection.m:
	* Source/NSSpellServer.m:
	* Tools/AGSParser.m
	Fix dead initialisations.
	* Source/GSAttributedString.m:
	* Source/tzdb.h:
	Fix dead assignments
	* Source/NSTask.m: