@@ -82,9 +82,11 @@ typedef GSIMapNode_t *GSIMapNode;
 #define	GSI_MAP_KTYPES	GSUNION_PTR | GSUNION_OBJ
 #define	GSI_MAP_VTYPES	GSUNION_PTR | GSUNION_OBJ
 #define IS_WEAK_KEY(M) \
-  M->cb.pf.k.options & (NSPointerFunctionsZeroingWeakMemory | NSPointerFunctionsWeakMemory)
+  (memoryType(M->cb.pf.k.options, NSPointerFunctionsZeroingWeakMemory) \
+   || memoryType(M->cb.pf.k.options, NSPointerFunctionsWeakMemory))
 #define IS_WEAK_VALUE(M) \
-  M->cb.pf.v.options & (NSPointerFunctionsZeroingWeakMemory | NSPointerFunctionsWeakMemory)
+  (memoryType(M->cb.pf.v.options, NSPointerFunctionsZeroingWeakMemory) \
+  || memoryType(M->cb.pf.v.options, NSPointerFunctionsWeakMemory))
 #define GSI_MAP_HASH(M, X)\
  (M->legacy ? M->cb.old.k.hash(M, X.ptr) \
  : pointerFunctionsHash(&M->cb.pf.k, X.ptr))
